--- a/app/src/main/res/drawable/bg_ticket_red.xml
+++ b/app/src/main/res/drawable/bg_ticket_red.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/Red" />
-    <corners android:topLeftRadius="20dp" android:bottomLeftRadius="20dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+
+    <item android:right="20dp">
+        <shape android:shape="rectangle">
+            <size android:width="20dp"/>
+            <solid android:color="@color/Red"/>
+            <corners android:topLeftRadius="15dp"
+                android:bottomLeftRadius="15dp"/>
+        </shape>
+    </item>
+
+    <item android:left="20dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/ContainerTint"/>
+            <corners android:topRightRadius="15dp"
+                android:bottomRightRadius="15dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp"
+                android:color="@color/ContainerStroke"/>
+            <corners android:radius="13dp"/>
+        </shape>
+    </item>
+
+</layer-list>
