--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -290,7 +290,7 @@
                         android:text="포인트"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_personal_history"
-                        android:onClick="@{activity_main::onNavPesonalPointClick}"/>
+                        android:onClick="@{activity_main::onNavPersonalPointClick}"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
