--- a/app/src/main/res/layout/item_ticket.xml
+++ b/app/src/main/res/layout/item_ticket.xml
@@ -1,17 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackgroundBorderless">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_ticket"
         android:layout_width="match_parent"
         android:layout_height="131dp"
         android:layout_marginStart="13dp"
+        android:layout_marginTop="22dp"
         android:background="@drawable/bg_ticket_green"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="10dp" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_my_ticket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:rotation="-90"
+            android:text="MY TICKET"
+            android:textColor="@color/White"
+            android:textSize="9sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/guideline2"
+            app:layout_constraintStart_toStartOf="@id/guideline2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:notoTextStyle="medium" />
+
+        <ImageView
+            android:id="@+id/iv_ticket_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="52dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_ticket_bus_code"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/icon_bus_green" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_ticket_bus_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="A15"
+            android:textColor="@color/TextBlack"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/tv_ticket_state"
+            app:layout_constraintEnd_toEndOf="@id/iv_ticket_icon"
+            app:layout_constraintStart_toStartOf="@id/iv_ticket_icon"
+            app:layout_constraintTop_toBottomOf="@id/iv_ticket_icon"
+            app:notoTextStyle="bold" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_ticket_state"
+            android:layout_width="51dp"
+            android:layout_height="17dp"
+            android:layout_marginTop="11dp"
+            android:background="@drawable/bg_route_state_operating"
+            android:gravity="center"
+            android:text="운행중"
+            android:textColor="@color/White"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/iv_ticket_icon"
+            app:layout_constraintStart_toStartOf="@id/iv_ticket_icon"
+            app:layout_constraintTop_toBottomOf="@id/tv_ticket_bus_code"
+            app:notoTextStyle="medium" />
+
+        <ImageView
+            android:id="@+id/iv_ticket_departure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="38dp"
+            app:layout_constraintBottom_toTopOf="@+id/iv_ticket_destination"
+            app:layout_constraintStart_toEndOf="@id/iv_ticket_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/icon_departure_big" />
+
+        <ImageView
+            android:id="@+id/iv_ticket_destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/pb_personnel"
+            app:layout_constraintEnd_toEndOf="@+id/iv_ticket_departure"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/iv_ticket_departure"
+            app:layout_constraintTop_toBottomOf="@+id/iv_ticket_departure"
+            app:srcCompat="@drawable/icon_destination_big" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_departure_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:text="7:15"
+            android:textColor="@color/TextBlack"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_ticket_departure"
+            app:layout_constraintStart_toEndOf="@+id/iv_ticket_departure"
+            app:layout_constraintTop_toTopOf="@+id/iv_ticket_departure" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_departure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:text="선릉역 1번 출구"
+            android:textColor="@color/TextBlack"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_ticket_departure"
+            app:layout_constraintStart_toEndOf="@id/tv_departure_time"
+            app:layout_constraintTop_toTopOf="@+id/iv_ticket_departure" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_destination_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="9dp"
+            android:text="8:15"
+            android:textColor="@color/TextBlack"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_ticket_destination"
+            app:layout_constraintStart_toEndOf="@+id/iv_ticket_destination"
+            app:layout_constraintTop_toTopOf="@+id/iv_ticket_destination" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_destination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:text="수원 성균관대학교"
+            android:textColor="@color/TextBlack"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_ticket_destination"
+            app:layout_constraintStart_toEndOf="@id/tv_destination_time"
+            app:layout_constraintTop_toTopOf="@id/iv_ticket_destination" />
+
+        <ProgressBar
+            android:id="@+id/pb_personnel"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="199dp"
+            android:layout_height="4dp"
+            android:layout_marginTop="25dp"
+            android:max="16"
+            android:progress="10"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/iv_ticket_destination"
+            app:layout_constraintTop_toBottomOf="@+id/iv_ticket_destination" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_personnel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="10/16"
+            android:textColor="@color/TextGray"
+            android:textSize="9sp"
+            app:layout_constraintBottom_toTopOf="@id/pb_personnel"
+            app:layout_constraintEnd_toEndOf="@id/pb_personnel" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
