--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/tb_main"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="@dimen/toolbar_height"
                 android:background="@color/Primary"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintTop_toTopOf="parent">
