--- a/app/src/main/res/layout/fragment_add_route_search.xml
+++ b/app/src/main/res/layout/fragment_add_route_search.xml
@@ -15,18 +15,26 @@
             app:layout_constraintGuide_begin="?attr/actionBarSize" />
 
         <com.thustop_00.widgets.NotoEditText
-            android:id="@+id/et_start"
-            android:layout_marginTop="10dp"
-            android:singleLine="true"
-            style="@style/EtAddRouteStyle"
-            android:background="@drawable/bg_outline25_green"
-            android:text=""
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toTopOf="@id/et_end"
-            app:layout_constraintTop_toTopOf="@id/guideline1"
+            android:id="@+id/et_dummy"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:focusable="true"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.thustop_00.widgets.NotoEditText
+            android:id="@+id/et_start"
+            style="@style/EtAddRouteStyle"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_outline25_green"
+            android:focusable="true"
+            android:singleLine="true"
+            android:text=""
+            app:layout_constraintBottom_toTopOf="@id/et_end"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/guideline1"
+            app:notoTextStyle="regular" />
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,16 +46,18 @@
 
         <com.thustop_00.widgets.NotoEditText
             android:id="@+id/et_end"
-            android:layout_marginTop="10dp"
             style="@style/EtAddRouteStyle"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_outline25_red"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:maxLines="1"
             android:singleLine="true"
             android:text=""
-            android:maxLines="1"
-            android:background="@drawable/bg_outline25_red"
-            app:notoTextStyle="regular"
-            app:layout_constraintTop_toBottomOf="@id/et_start"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/et_start"
+            app:notoTextStyle="regular" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -64,18 +74,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="14dp"
+            android:focusable="true"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/et_end"
             tools:listitem="@layout/item_location_search" />
-        <com.thustop_00.widgets.NotoEditText
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/et_dummy"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
