--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
@@ -11,15 +11,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/White">
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_ticket"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ticket"
             android:layout_width="match_parent"
-            android:layout_height="131dp"
-            android:layout_marginTop="26dp"
+            android:layout_height="153dp"
+            android:layout_marginTop="4dp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:listitem="@layout/item_ticket" />
+
         <com.thustop_00.widgets.NotoTextView
         android:id="@+id/tv_title_left_ticket"
         android:layout_width="wrap_content"
@@ -50,7 +54,7 @@
             android:layout_height="46dp"
             android:layout_marginTop="13dp"
             android:background="#f3f3f3"
-            app:layout_constraintTop_toBottomOf="@id/vp_ticket"
+            app:layout_constraintTop_toBottomOf="@id/rv_ticket"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <com.thustop_00.widgets.NotoTextView
@@ -232,14 +236,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <FrameLayout
-            android:id="@+id/Frame_info"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
